# MediScan-AI

./: .gitignore  README.md  app.py  config.ini  pyproject.toml  requirements.txt
.streamlit/: config.toml
assets/data/: README.roboflow.txt  data.yaml
core/: Video_process.py  analyzer.py  detector.py  model.py  style.css
models/yolov8m/exp1/: args.yaml  results.csv
models/yolov8n/exp1/: args.yaml  results.csv
models/yolov8s/exp1/: args.yaml  results.csv
