[project]
name = "mediscan-ai"
version = "0.1.0"
description = "mediscan-ai is a Streamlit-based application that utilizes YOLOv8 for real-time object detection and analysis in medical imaging. It provides an intuitive interface for users to upload images, select models, and visualize results with confidence scores."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "certifi==2026.1.4",
    "charset-normalizer==3.4.4",
    "contourpy==1.3.2",
    "cycler==0.12.1",
    "filelock==3.20.3",
    "fonttools==4.61.1",
    "fsspec==2026.2.0",
    "idna==3.11",
    "jinja2==3.1.6",
    "kiwisolver==1.4.9",
    "markupsafe==3.0.3",
    "mpmath==1.3.0",
    "networkx==3.4.2",
    "numpy==2.2.6",
    "packaging==26.0",
    "pillow==12.1.1",
    "polars-runtime-32==1.38.1",
    "pyparsing==3.3.2",
    "python-dateutil==2.9.0.post0",
    "six==1.17.0",
    "streamlit>=1.54.0",
    "sympy==1.14.0",
    "torch==2.10.0",
    "torchvision==0.25.0",
    "typing-extensions==4.15.0",
    "ultralytics>=8.4.14",
    "ultralytics-thop==2.0.18",
    "urllib3==2.6.3",
]
